; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-metadata.c_dm_cache_metadata_set_stats.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-metadata.c_dm_cache_metadata_set_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_cache_metadata = type { %struct.dm_cache_statistics }
%struct.dm_cache_statistics = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dm_cache_metadata_set_stats(%struct.dm_cache_metadata* %0, %struct.dm_cache_statistics* %1) #0 {
  %3 = alloca %struct.dm_cache_metadata*, align 8
  %4 = alloca %struct.dm_cache_statistics*, align 8
  store %struct.dm_cache_metadata* %0, %struct.dm_cache_metadata** %3, align 8
  store %struct.dm_cache_statistics* %1, %struct.dm_cache_statistics** %4, align 8
  %5 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %3, align 8
  %6 = call i32 @WRITE_LOCK_VOID(%struct.dm_cache_metadata* %5)
  %7 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %3, align 8
  %8 = getelementptr inbounds %struct.dm_cache_metadata, %struct.dm_cache_metadata* %7, i32 0, i32 0
  %9 = load %struct.dm_cache_statistics*, %struct.dm_cache_statistics** %4, align 8
  %10 = bitcast %struct.dm_cache_statistics* %8 to i8*
  %11 = bitcast %struct.dm_cache_statistics* %9 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %10, i8* align 4 %11, i64 4, i1 false)
  %12 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %3, align 8
  %13 = call i32 @WRITE_UNLOCK(%struct.dm_cache_metadata* %12)
  ret void
}

declare dso_local i32 @WRITE_LOCK_VOID(%struct.dm_cache_metadata*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @WRITE_UNLOCK(%struct.dm_cache_metadata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
